v3.1.28 (XXXX-XX-XX)
--------------------

* fixed issue #3408

* fix potential overflow in CRC marker check when a corrupted CRC marker 
  is found at the very beginning of an MMFiles datafile

* fix double compaction runs

* used the required mutex in Store::clear to avoid races


v3.1.27 (2017-08-03)
--------------------

* fixed issue #2928: Offset problems

* fixed potential deadlock errors in collector thread

* fixed revision cache cleanup behavior in out-of-memory situations

* fixed issue #2889: Traversal query using incorrect collection id

* fixed issue #2884: AQL traversal uniqueness constraints "propagating" to other traversals? Weird results

* fixed issue #2879


v3.1.26 (2017-07-26)
--------------------

* fixed vanishing revision cache


v3.1.25 (2017-07-12)
--------------------

* fixed one medium priority and two low priority security user interface
  issues found by owasp zap.

* fixed parallel access to list of failed servers

* fixed ID lookup for secondaries

* removed secondaries from local and distributed cluster deployments


v3.1.24 (2017-07-04)
--------------------

* fixed one more LIMIT issue in traversals

* fixed issue #2684: Legacy service UI not working


v3.1.23 (2017-06-19)
--------------------

* potentially fixed issue #2559: Duplicate _key generated on insertion

* fix races in SSL communication code

* fix invalid results (too many) when a skipping LIMIT was used for a
  traversal. `LIMIT x` or `LIMIT 0, x` were not affected, but `LIMIT s, x`
  may have returned too many results

* fix invalid first group results for sorted AQL COLLECT when LIMIT
  was used

* fix invalid locking in JWT authentication cache, which could have
  crashed the server

* fix undefined behavior in traverser when traversals were used inside
  a FOR loop


v3.1.22 (2017-06-07)
--------------------

* fixed issue #2505: Problem with export + report of a bug

* documented changed behavior of WITH

* fixed ui glitch in aardvark
