@@ -1,6 +1,8 @@
 v3.1.28 (XXXX-XX-XX)
 --------------------
 
+* fixed issue #2690: LogBuffer in case of too many messages 
+
 * fixed issue #3408
 
 * fix potential overflow in CRC marker check when a corrupted CRC marker 
